# AHT20

./: CMakeLists.txt  README.md
Inc/: aht20.h
Src/: aht20.c
stm32/: aht20_HAL_stm32.c
